[package]
name = "auditguard"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
sysinfo = "0.39"
libc = "0.2"
nix = { version = "0.29", features = ["fs", "process", "user"] }
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
colored = "2.1"
anyhow = "1.0"
notify = "6.1"

